# flexible_load_analysis

./: .gitignore  README.md  algoritme_og_kodestruktur.txt  analysis.py  config.json  config.toml  data_formatting.py  data_loading.py  data_splitting.py  grid_modification.py  hjelpefunksjoner.py  hoved_fil.py  init.py  interactive_analysis.py  last_modell.py  load_points.py  main.py  modelling.py  net_modification.py  network.py  network_modification.py  nodes.py  overload_characterization.py  plotting.py  preprocessing.py  pyproject.toml  requirements.txt  sample_load_data.xlsx  standards.txt  test.py  timeseries.py  utilities.py
analyses/: __init__.py  coincidence_factors.py  load_aggregation.py  max_load.py
example_data/: TUTORIAL.md  Temperatur_Strømtangen_fyr_2000-2020.xlsx  example_config.toml  example_encoding.xlsx  example_load_data.txt
example_data/example_load_data_split/: 30001.txt
example_data/example_network/: branch.csv  bus.csv  gen.csv
flexibility/: flexibility_need.py
flexible_load_analysis/: plotting.py
in_data/: .gitignore
models/: model_specification.txt  toenne.py
old_implementation/: hjelpefunksjoner.py  hoved_fil.py  test_data.py
scripts/: data_formatting.py  interactive_FLA.py  main.py  overload_characterization.py  simplify_net.py
src/: data_formatting.py  main.py  overload_characterization.py  plotting.py  utilities.py
temperatur_data/: Temperatur_Strømtangen_fyr_2000-2019.xlsx  Temperatur_Strømtangen_fyr_2018-2020.xlsx  Temperatur_Strømtangen_fyr_2020.xlsx
tests/: init_test_data.py  test_radial_network_traversal.py
(+62 files in other folders)
